[package]
name = "pvoc"
version = "0.1.5"
authors = ["Noah Weninger <nweninge@ualberta.ca>"]
description = "A phase vocoder for making audio effects"
repository = "https://github.com/nwoeanhinnogaehr/pvoc-rs"
readme = "README.md"
keywords = ["audio", "fft", "dsp", "fourier"]
license = "GPL-3.0"

[dependencies]
rustfft = "3.0.1"
apodize = "1.0.0"

[dev-dependencies]
approx = "0.3.2"
